[gd_scene load_steps=3 format=3 uid="uid://cd8m7ajbt48tu"]

[ext_resource type="Script" uid="uid://d230w466rjp2h" path="res://scenes/UI/orderable_sliders.gd" id="1_00nin"]
[ext_resource type="Script" uid="uid://ds7ag6voox01b" path="res://scenes/UI/draggable_container.gd" id="1_qkrgr"]

[node name="orderable_sliders" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_00nin")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0147569
anchor_top = 0.864198
anchor_right = 1.0
anchor_bottom = 0.983025
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[node name="rx_box" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_qkrgr")

[node name="rx_slider" type="HSlider" parent="VBoxContainer/rx_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 720.0
step = 0.01

[node name="up1" type="Button" parent="VBoxContainer/rx_box"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "^"

[node name="rx_text" type="RichTextLabel" parent="VBoxContainer/rx_box"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "RX(0.0)"
fit_content = true
scroll_active = false
metadata/_edit_use_anchors_ = true

[node name="setrx" type="LineEdit" parent="VBoxContainer/rx_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13
theme_override_font_sizes/font_size = 14
placeholder_text = "set RX"
metadata/_edit_use_anchors_ = true

[node name="ry_box" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_qkrgr")

[node name="ry_slider" type="HSlider" parent="VBoxContainer/ry_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 720.0
step = 0.01

[node name="up2" type="Button" parent="VBoxContainer/ry_box"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "^"

[node name="ry_text" type="RichTextLabel" parent="VBoxContainer/ry_box"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.25
text = "RY(0.0)"
fit_content = true
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="setry" type="LineEdit" parent="VBoxContainer/ry_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13
theme_override_font_sizes/font_size = 14
placeholder_text = "set RY"
metadata/_edit_use_anchors_ = true

[node name="rz_box" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
script = ExtResource("1_qkrgr")

[node name="rz_slider" type="HSlider" parent="VBoxContainer/rz_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_value = 720.0
step = 0.01

[node name="up3" type="Button" parent="VBoxContainer/rz_box"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "^"

[node name="rz_text" type="RichTextLabel" parent="VBoxContainer/rz_box"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
size_flags_stretch_ratio = 0.25
text = "RZ(0.0)"
fit_content = true
autowrap_mode = 0
metadata/_edit_use_anchors_ = true

[node name="setrz" type="LineEdit" parent="VBoxContainer/rz_box"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.13
theme_override_font_sizes/font_size = 14
placeholder_text = "set RZ"
metadata/_edit_use_anchors_ = true

[connection signal="value_changed" from="VBoxContainer/rx_box/rx_slider" to="." method="_on_rx_slider_value_changed"]
[connection signal="button_up" from="VBoxContainer/rx_box/up1" to="VBoxContainer/rx_box" method="_move_up"]
[connection signal="text_changed" from="VBoxContainer/rx_box/setrx" to="." method="_on_setrx_text_changed"]
[connection signal="value_changed" from="VBoxContainer/ry_box/ry_slider" to="." method="_on_ry_slider_value_changed"]
[connection signal="button_up" from="VBoxContainer/ry_box/up2" to="VBoxContainer/ry_box" method="_move_up"]
[connection signal="text_changed" from="VBoxContainer/ry_box/setry" to="." method="_on_setry_text_changed"]
[connection signal="value_changed" from="VBoxContainer/rz_box/rz_slider" to="." method="_on_rz_slider_value_changed"]
[connection signal="button_up" from="VBoxContainer/rz_box/up3" to="VBoxContainer/rz_box" method="_move_up"]
[connection signal="text_changed" from="VBoxContainer/rz_box/setrz" to="." method="_on_setrz_text_changed"]
